syntax="proto3";

package user;

service UserService{
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc ListUsers (Empty) returns (UserListResponse);
}

message Empty{}

message GetUserRequest{
    string user_id = 1;
}

message CreateUserRequest{
    string name=1;
    string email=2;
}

message User{
    string id=1;
    string name=2;
    string email=3;
    string created_at=4;
}

message UserResponse{
    bool success=1;
    string message=2;
    User user=3;
}

message UserListResponse{
    bool success=1;
    string message=2;
    repeated User users=3;
}
